--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Controle de Eventos</title>
 
     <script type="text/javascript" src="http://localhost/lib/dhtmlx/codebase/dhtmlx.js"></script>
     <script type="text/javascript" src="http://localhost/lib/jquery/jquery-3.4.1.js"></script>
+    <script type="text/javascript" src="js/forms.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
-    <link type="text/css" rel="stylesheet" href="/lib/dhtmlx/skins/material/dhtmlx.css">
-    <link rel="stylesheet" type="text/css" href="/lib/dhtmlx/codebase/fonts/font_roboto/roboto.css"/>
+    <link type="text/css" rel="stylesheet" href="http://localhost/lib/dhtmlx/skins/material/dhtmlx.css">
+    <link rel="stylesheet" type="text/css" href="http://localhost/lib/dhtmlx/codebase/fonts/font_roboto/roboto.css"/>
     <link type="text/css" rel="stylesheet" href="css/app.css">
 
 
 </head>
 <body>
-
 </body>
 </html>
