novos chamados e registros

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" type="text/css" href="http://localhost/lib/dhtmlx/codebase/fonts/font_roboto/roboto.css"/>
     <link type="text/css" rel="stylesheet" href="css/app.css">
 
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+
 
 </head>
 <body>
