--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <title>Controle de Eventos</title>
 
+    <link type="text/css" rel="stylesheet" href="css/app.css">
     <script type="text/javascript" src="http://localhost/lib/dhtmlx/codebase/dhtmlx.js"></script>
     <script type="text/javascript" src="http://localhost/lib/jquery/jquery-3.4.1.js"></script>
-    <script type="text/javascript" src="js/forms.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/dashboard.js"></script>
+    <script type="text/javascript" src="js/forms.js"></script>
+    <script type="text/javascript" src="js/registros.js"></script>
+    <script type="text/javascript" src="js/chamados.js"></script>
     <link type="text/css" rel="stylesheet" href="http://localhost/lib/dhtmlx/skins/material/dhtmlx.css">
     <link rel="stylesheet" type="text/css" href="http://localhost/lib/dhtmlx/codebase/fonts/font_roboto/roboto.css"/>
-    <link type="text/css" rel="stylesheet" href="css/app.css">
 
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
-
 
 </head>
 <body>
