--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <title>Controle de Eventos</title>
 
     <link type="text/css" rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/b9786aa6c5.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="http://localhost/lib/dhtmlx/codebase/dhtmlx.js"></script>
     <script type="text/javascript" src="http://localhost/lib/jquery/jquery-3.4.1.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/clientes.js"></script>
     <script type="text/javascript" src="js/dashboard.js"></script>
     <script type="text/javascript" src="js/forms.js"></script>
     <script type="text/javascript" src="js/registros.js"></script>
