--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Controle de Eventos</title>
 
-    <link type="text/css" rel="stylesheet" href="css/app.css">
+    <link type="text/css" rel="stylesheet" href="./css/app.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/b9786aa6c5.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="http://localhost/lib/dhtmlx/codebase/dhtmlx.js"></script>
