--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="http://localhost/lib/dhtmlx/codebase/dhtmlx.js"></script>
     <script type="text/javascript" src="http://localhost/lib/jquery/jquery-3.4.1.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/situacao.js"></script>
     <script type="text/javascript" src="js/clientes.js"></script>
     <script type="text/javascript" src="js/dashboard.js"></script>
     <script type="text/javascript" src="js/forms.js"></script>
