--- a/chart.html
+++ b/chart.html
@@ -18,43 +18,58 @@
     <script type="text/javascript" src="http://localhost/lib/mdb/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="http://localhost/lib/mdb/js/mdb.min.js"></script>
 
-
-
-    <style>
-        body {
-            overflow: visible;
-        }
-    </style>
-
-
-
 </head>
-
 <body>
-<div class="container my-5">
+<div class="container my-5 py-5">
+    <!--Section Block Content-->
     <section>
         <div class="">
-            <div class="card-body px-0 pb-0">
-                <h5 class="text-center font-weight-bold mb-4">Browser Usage</h5>
-                <hr>
-                <div class="row mt-3 pt-3">
+            <div class="card-body mr-md-1">
+                <!--Grid row-->
+                <div class="row mb-3">
                     <!--Grid column-->
-                    <div class="col-md-6 mb-4 mb-md-0 mx-auto">
-                        <canvas id="doughnutChart"></canvas>
+                    <div class="col-md-8 mb-4">
+                        <canvas id="barChart" height="100"></canvas>
                     </div>
                     <!--Grid column-->
+                    <div class="col-md-4 mb-1 mb-md-0">
 
-                    <div class="col-12 pt-4 mt-2 mb-4 mb-md-0 mx-auto">
-                        <div class="list-group">
-                            <a href="#!" class="list-group-item list-group-item-action rounded-0 border-left-0 border-right-0 d-flex justify-content-between align-items-center">United States of America
-                                <span class="text-danger"><i class="fas fa-chevron-down"></i> 12%</span>
-                            </a>
-                            <a href="#!" class="list-group-item list-group-item-action rounded-0 border-left-0 border-right-0 d-flex justify-content-between align-items-center">India
-                                <span class="text-success"><i class="fas fa-chevron-up"></i> 4%</span>
-                            </a>
-                            <a href="#!" class="list-group-item list-group-item-action border-bottom-0 border-left-0 border-right-0 rounded-bottom-left rounded-bottom-right d-flex justify-content-between align-items-center">China
-                                <span class="text-warning"><i class="fas fa-chevron-left"></i> 0%</span>
-                            </a>
+                        <h5 class="text-center font-weight-bold mb-4">E-commerce data</h5>
+
+                        <div class="d-flex justify-content-between">
+                            <small class="text-muted">Add products to cart</small>
+                            <small><span><strong>160</strong></span>/<span></span>200</small>
+                        </div>
+                        <div class="progress md-progress">
+                            <div class="progress-bar bg-success" role="progressbar" style="width: 55%" aria-valuenow="55"
+                                 aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+
+                        <div class="d-flex justify-content-between">
+                            <small class="text-muted">Complete Purchase</small>
+                            <small><span><strong>310</strong></span>/<span></span>400</small>
+                        </div>
+                        <div class="progress md-progress">
+                            <div class="progress-bar bg-info" role="progressbar" style="width: 80%" aria-valuenow="80"
+                                 aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+
+                        <div class="d-flex justify-content-between">
+                            <small class="text-muted">Visit Premium Page</small>
+                            <small><span><strong>480</strong></span>/<span></span>800</small>
+                        </div>
+                        <div class="progress md-progress">
+                            <div class="progress-bar bg-warning" role="progressbar" style="width: 45%" aria-valuenow="45"
+                                 aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+
+                        <div class="d-flex justify-content-between">
+                            <small class="text-muted">Send Inquiries</small>
+                            <small><span><strong>250</strong></span>/<span></span>500</small>
+                        </div>
+                        <div class="progress md-progress">
+                            <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100"
+                                 aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                     <!--Grid column-->
@@ -62,110 +77,87 @@
                 <!--Grid row-->
             </div>
         </div>
+        <div class="container my-5 py-5" style="margin-top: -20%">
+            <!-- Section: Block Content -->
+            <section class="">
+                <!--Grid row-->
+                <div class="row">
+                    <!--Grid column-->
+                    <div class="col-lg-4 col-md-12 mb-4">
+
+                        <!-- Admin card -->
+                        <div class="card mt-3">
+
+                            <div class="">
+                                <i class="far fa-money-bill-alt fa-lg primary-color p-4 ml-3 mt-n3 rounded text-white"></i>
+                                <div class="float-right text-right p-3">
+                                    <p class="text-uppercase text-muted mb-1"><small>sales</small></p>
+                                    <h4 class="font-weight-bold mb-0">23 000$</h4>
+                                </div>
+                            </div>
+
+                            <div class="card-body pt-0">
+                                <div class="progress md-progress">
+                                    <div class="progress-bar bg-success" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
+                                         aria-valuemax="100"></div>
+                                </div>
+                                <p class="card-text">Better than last week (75%)</p>
+                            </div>
+
+                        </div>
+                        <!-- Admin card -->
+                    </div>
+                    <!--Grid column-->
+                    <!--Grid column-->
+                    <div class="col-lg-4 col-md-6 mb-4">
+                        <!-- Admin card -->
+                        <div class="card mt-3">
+                            <div class="">
+                                <i class="fas fa-chart-line fa-lg teal z-depth-2 p-4 ml-3 mt-n3 rounded text-white"></i>
+                                <div class="float-right text-right p-3">
+                                    <p class="text-uppercase text-muted mb-1"><small>subscriptions</small></p>
+                                    <h4 class="font-weight-bold mb-0">3534</h4>
+                                </div>
+                            </div>
+                            <div class="card-body pt-0">
+                                <div class="progress md-progress">
+                                    <div class="progress-bar bg-danger" role="progressbar" style="width: 46%" aria-valuenow="46" aria-valuemin="0"
+                                         aria-valuemax="100"></div>
+                                </div>
+                                <p class="card-text">Worse than last week (46%)</p>
+                            </div>
+                        </div>
+                        <!-- Admin card -->
+                    </div>
+                    <!--Grid column-->
+                    <div class="col-lg-4 col-md-6 mb-4">
+                        <!-- Admin card -->
+                        <div class="card mt-3">
+                            <div class="">
+                                <i class="fas fa-chart-pie fa-lg purple z-depth-2 p-4 ml-3 mt-n3 rounded text-white"></i>
+                                <div class="float-right text-right p-3">
+                                    <p class="text-uppercase text-muted mb-1"><small>traffic</small></p>
+                                    <h4 class="font-weight-bold mb-0">656 234</h4>
+                                </div>
+                            </div>
+                            <div class="card-body pt-0">
+                                <div class="progress md-progress">
+                                    <div class="progress-bar bg-success" role="progressbar" style="width: 31%" aria-valuenow="31" aria-valuemin="0"
+                                         aria-valuemax="100"></div>
+                                </div>
+                                <p class="card-text">Better than last week (31%)</p>
+                            </div>
+                        </div>
+                        <!-- Admin card -->
+                    </div>
+                    <!--Grid column-->
+                </div>
+                <!--Grid row-->
+            </section>
+            <!--Section: Content-->
+        </div>
     </section>
-    <!--Section: Content-->
-    <div class="container my-5 py-5">
-
-
-        <!-- Section: Block Content -->
-        <section class="">
-
-            <!--Grid row-->
-            <div class="row">
-
-                <!--Grid column-->
-                <div class="col-lg-4 col-md-12 mb-4">
-
-                    <!-- Admin card -->
-                    <div class="card mt-3">
-
-                        <div class="">
-                            <i class="far fa-money-bill-alt fa-lg primary-color z-depth-2 p-4 ml-3 mt-n3 rounded text-white"></i>
-                            <div class="float-right text-right p-3">
-                                <p class="text-uppercase text-muted mb-1"><small>sales</small></p>
-                                <h4 class="font-weight-bold mb-0">23 000$</h4>
-                            </div>
-                        </div>
-
-                        <div class="card-body pt-0">
-                            <div class="progress md-progress">
-                                <div class="progress-bar bg-success" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
-                                     aria-valuemax="100"></div>
-                            </div>
-                            <p class="card-text">Better than last week (75%)</p>
-                        </div>
-
-                    </div>
-                    <!-- Admin card -->
-
-                </div>
-                <!--Grid column-->
-
-                <!--Grid column-->
-                <div class="col-lg-4 col-md-6 mb-4">
-
-                    <!-- Admin card -->
-                    <div class="card mt-3">
-
-                        <div class="">
-                            <i class="fas fa-chart-line fa-lg teal z-depth-2 p-4 ml-3 mt-n3 rounded text-white"></i>
-                            <div class="float-right text-right p-3">
-                                <p class="text-uppercase text-muted mb-1"><small>subscriptions</small></p>
-                                <h4 class="font-weight-bold mb-0">3534</h4>
-                            </div>
-                        </div>
-
-                        <div class="card-body pt-0">
-                            <div class="progress md-progress">
-                                <div class="progress-bar bg-danger" role="progressbar" style="width: 46%" aria-valuenow="46" aria-valuemin="0"
-                                     aria-valuemax="100"></div>
-                            </div>
-                            <p class="card-text">Worse than last week (46%)</p>
-                        </div>
-
-                    </div>
-                    <!-- Admin card -->
-
-                </div>
-                <!--Grid column-->
-
-                <!--Grid column-->
-                <div class="col-lg-4 col-md-6 mb-4">
-
-                    <!-- Admin card -->
-                    <div class="card mt-3">
-
-                        <div class="">
-                            <i class="fas fa-chart-pie fa-lg purple z-depth-2 p-4 ml-3 mt-n3 rounded text-white"></i>
-                            <div class="float-right text-right p-3">
-                                <p class="text-uppercase text-muted mb-1"><small>traffic</small></p>
-                                <h4 class="font-weight-bold mb-0">656 234</h4>
-                            </div>
-                        </div>
-
-                        <div class="card-body pt-0">
-                            <div class="progress md-progress">
-                                <div class="progress-bar bg-success" role="progressbar" style="width: 31%" aria-valuenow="31" aria-valuemin="0"
-                                     aria-valuemax="100"></div>
-                            </div>
-                            <p class="card-text">Better than last week (31%)</p>
-                        </div>
-
-                    </div>
-                    <!-- Admin card -->
-
-                </div>
-                <!--Grid column-->
-
-            </div>
-            <!--Grid row-->
-
-        </section>
-        <!--Section: Content-->
-
-
-    </div>
-
+    <!--Section: Block Content-->
 </div>
 
 <script type="text/javascript" src="js/chart.js"></script>
