--- a/chart.html
+++ b/chart.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 
     <link type="text/css" rel="stylesheet" href="./css/app.css">
-    <script type="text/javascript" src="js/chart.js"></script>
+    <script type="text/javascript" src="js/dashboard.js"></script>
     <script type="text/javascript" src="http://localhost/lib/dhtmlx/codebase/dhtmlx.js"></script>
     <script type="text/javascript" src="http://localhost/lib/jquery/jquery-3.4.1.js"></script>
     <link type="text/css" rel="stylesheet" href="http://localhost/lib/dhtmlx/skins/material/dhtmlx.css">
@@ -17,6 +17,8 @@
     <script type="text/javascript" src="http://localhost/lib/mdb/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="http://localhost/lib/mdb/js/mdb.min.js"></script>
 
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <style>
         body{
             overflow: hidden;
@@ -24,40 +26,31 @@
     </style>
 </head>
 <body>
+<template id="barras">
+    <div class="card-body pt-0">
+        <div class="progress md-progress">
+            <div id="porcentagem" class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+        <p id="descricao" class="card-text"></p>
+    </div>
+</template>
 <div class="container my-5 py-5">
     <section style="margin-top: -13%">
         <div class="row">
             <div class="col-lg-4 col-md-12 mb-4">
                 <div class="card mt-3">
                     <div class="">
-                        <i class="far fa-money-bill-alt fa-lg cor-padrao z-depth-2 p-4 ml-3 mt-n3 rounded text-white"></i>
+                        <!--i class="far fa-money-bill-alt fa-lg cor-padrao z-depth-2 p-4 ml-3 mt-n3 rounded text-white"></i-->
+                        <i id="icone" class="material-icons fa-lg cor-padrao z-depth-2 p-4 ml-3 mt-n3 rounded text-white">
+                        </i>
                         <div class="float-right text-right p-3">
                             <p class="text-uppercase text-muted mb-1"><small>Ticket Panel</small></p>
-                            <span class="badge cor-padrao ml-2"><span>4</span> Chamados na Fila</span>
+                            <span class="badge cor-padrao ml-2"><span id="chamados"></span> Chamados na Fila</span>
 <!--                            <h4 class="font-weight-bold mb-0">CHAMADOS NA FILA</h4>-->
                         </div>
                     </div>
 
-                    <div class="card-body pt-0">
-                        <div class="progress md-progress">
-                            <div class="progress-bar aberto" role="progressbar" style="width: 25%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <p class="card-text">Chamados em Aberto (25%)</p>
-                    </div>
-
-                    <div class="card-body pt-0">
-                        <div class="progress md-progress">
-                            <div class="progress-bar pendente" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <p class="card-text">Chamados Pendentes (75%)</p>
-                    </div>
-
-                    <div class="card-body pt-0">
-                        <div class="progress md-progress">
-                            <div class="progress-bar resolvido" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <p class="card-text">Chamados resolvidos (75%)</p>
-                    </div>
+                    <div id="data_container"></div>
 
                 </div>
             </div>
