--- a/chart.html
+++ b/chart.html
@@ -45,7 +45,7 @@
                         </i>
                         <div class="float-right text-right p-3">
                             <p class="text-uppercase text-muted mb-1"><small>Ticket Panel</small></p>
-                            <span class="badge cor-padrao ml-2"><span id="chamados"></span> Chamados na Fila</span>
+                            <span class="badge cor-padrao ml-2"><span id="chamadosfila"></span> Chamados aguardando na Fila </span>
 <!--                            <h4 class="font-weight-bold mb-0">CHAMADOS NA FILA</h4>-->
                         </div>
                     </div>
