--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
 
     <link type="text/css" rel="stylesheet" href="./css/app.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto+Mono|Roboto+Slab&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b9786aa6c5.js" crossorigin="anonymous"></script>
+
     <script type="text/javascript" src="http://localhost/lib/dhtmlx/codebase/dhtmlx.js"></script>
     <script type="text/javascript" src="http://localhost/lib/jquery/jquery-3.4.1.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
@@ -18,12 +20,37 @@
     <script type="text/javascript" src="js/forms.js"></script>
     <script type="text/javascript" src="js/registros.js"></script>
     <script type="text/javascript" src="js/chamados.js"></script>
+
     <link type="text/css" rel="stylesheet" href="http://localhost/lib/dhtmlx/skins/material/dhtmlx.css">
     <link rel="stylesheet" type="text/css" href="http://localhost/lib/dhtmlx/codebase/fonts/font_roboto/roboto.css"/>
-
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+
+    <script defer src="/__/firebase/7.5.0/firebase-app.js"></script>
+    <script defer src="/__/firebase/7.5.0/firebase-auth.js"></script>
+    <script defer src="/__/firebase/init.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-analytics.js"></script>
+    <script type="text/javascript" src="https://vllibs.firebaseapp.com/oauth/oauth.js"></script>
 
 </head>
 <body>
 </body>
+<script>
+
+    let config = {
+        endpoint: 'https://api.craos.net:8443'
+    };
+
+    if (!sessionStorage.user) {
+        let oauth = new VerticalsOauth();
+        oauth.Start();
+        oauth.ActivateLogin(function () {
+            new app();
+        });
+    } else {
+        new app();
+    }
+
+
+</script>
 </html>
